objects/SDO_B2BCommerce_CustomContent__c.object
<CustomObject>
    <description>What: Used by the Moodboard B2B Commerce LE component
Who: B2B Commerce Team.</description>
    <fields>
        <fullName>B2B_LE_Content_Name__c</fullName>
        <label>B2B LE Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image_URI__c</fullName>
        <label>Image URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>B2BLE Custom Content</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2BLE Custom Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>